@@ -1,3 +1,10 @@
+Wed Oct  7 00:27:01 2009  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb (Resolv::DNS.bind_random_port): bind to "::" for IPv6.
+	  (Resolv::DNS::ConnectedUDP#initialize): specify is_ipv6 argument of
+	  bind_random_port.
+	  [ruby-core:25970]
+
 Tue Oct  6 06:26:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* * ext/tk/lib/tk/canvas.rb: *** POTENTIALLY INCOMPATIBLE ***
